Bug 290720 - Cannot sort folders on left side anymore. Dragging only makes a copy
Summary: Cannot sort folders on left side anymore. Dragging only makes a copy
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 1.99.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-05 17:59 UTC by H.H.
Modified: 2012-02-26 19:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.H. 2012-01-05 17:59:09 UTC
Version:           1.99.0 (using Devel) 
OS:                Linux

to reproduce:
- right-click name-column on folders at left side
- choose to manually sort folders
- try to sort folders by dragging a folder

==> the folder is copied (I messed with my very very big mail folder because of that!)


another problem is, that ressources seem not to be sortable. I would like to have my "alocal" ressource on top, and my imap ressources below. The ressource do not to be sorted at all.



Reproducible: Always

Steps to Reproduce:
see above

Actual Results:  
see above

Expected Results:  
sorting folders should be possible

OS: Linux (x86_64) release 2.6.37.1-1.2-desktop
Compiler: gcc
Comment 1 Laurent Montel 2012-02-22 08:05:17 UTC
for dnd we must put between folder not on folder otherwise it's copy.
I fixed a lot of bug in 4.8.1

For sorting account it's right I will fix it
Comment 2 Laurent Montel 2012-02-26 19:54:51 UTC
Git commit 8a3d1602c167efd50bd5118736ec95cf4af54bbe by Montel Laurent.
Committed on 26/02/2012 at 20:54.
Pushed by mlaurent into branch 'master'.

Fix Bug 290720 - Cannot sort folders on left side anymore. Dragging only

makes a copy
FIXED-IN: 4.9

M  +1    -0    kmail/CMakeLists.txt
A  +108  -0    kmail/accountconfigorderdialog.cpp     [License: GPL (v2)]
A  +42   -0    kmail/accountconfigorderdialog.h     [License: GPL (v2)]
M  +9    -0    kmail/configuredialog.cpp
M  +1    -0    kmail/configuredialog_p.h
M  +7    -0    kmail/ui/accountspagereceivingtab.ui
M  +15   -1    mailcommon/entitycollectionorderproxymodel.cpp
M  +1    -0    mailcommon/entitycollectionorderproxymodel.h
M  +5    -0    mailcommon/foldertreewidget.cpp

http://commits.kde.org/kdepim/8a3d1602c167efd50bd5118736ec95cf4af54bbe