Fix Bug 290720 - Cannot sort folders on left side anymore. Dragging only

makes a copy
FIXED-IN: 4.9
BUG: 290720