accountconfigorderdialog.cpp
@@ -1,0 +1,108 @@
+/*
+  Copyright (c) 2012 Montel Laurent <montel@kde.org>
+
+  This program is free software; you can redistribute it and/or modify it
+  under the terms of the GNU General Public License, version 2, as
+  published by the Free Software Foundation.
+
+  This program is distributed in the hope that it will be useful, but
+  WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+  General Public License for more details.
+
+  You should have received a copy of the GNU General Public License along
+  with this program; if not, write to the Free Software Foundation, Inc.,
+  51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+*/
+
+#include "accountconfigorderdialog.h"
+#include "kmkernel.h"
+
+#include "mailcommon/mailutil.h"
+
+
+#include <KLocale>
+
+#include <Akonadi/AgentInstance>
+#include <Akonadi/AgentManager>
+
+#include <KMime/KMimeMessage>
+
+#include <QVBoxLayout>
+#include <QListWidget>
+
+AccountConfigOrderDialog::AccountConfigOrderDialog(QWidget *parent)
+    :KDialog(parent)
+{
+    setCaption( i18n("Edit Accounts Order") );
+    setButtons( Ok|Cancel );
+    setDefaultButton( Ok );
+
+    QWidget *page = new QWidget( this );
+    setMainWidget( page );
+    QVBoxLayout * vlay = new QVBoxLayout( page );
+    mListAccount = new QListWidget(this);
+    mListAccount->setDragDropMode( QAbstractItemView::InternalMove );
+    vlay->addWidget(mListAccount);
+    connect( this, SIGNAL(okClicked()), SLOT(slotOk()) );
+    init();
+}
+
+AccountConfigOrderDialog::~AccountConfigOrderDialog()
+{
+
+}
+
+void AccountConfigOrderDialog::init()
+{
+    KConfigGroup group( KMKernel::self()->config(), "AccountOrder" );
+    const QStringList listOrderAccount = group.readEntry("order",QStringList());
+    QStringList instanceList;
+    QMap<QString, QString> mapInstance;
+    foreach ( const Akonadi::AgentInstance &instance, Akonadi::AgentManager::self()->instances() ) {
+        const QStringList capabilities( instance.type().capabilities() );
+        if ( instance.type().mimeTypes().contains( KMime::Message::mimeType() ) ) {
+            if ( capabilities.contains( "Resource" ) &&
+                 !capabilities.contains( "Virtual" ) &&
+                 !capabilities.contains( "MailTransport" ) )
+            {
+                if(!instance.identifier().contains(POP3_RESOURCE_IDENTIFIER)) {
+                    instanceList<<instance.identifier();
+                    mapInstance.insert(instance.identifier(),instance.name());
+                }
+            }
+        }
+    }
+    const int numberOfList(listOrderAccount.count());
+    for(int i = 0; i< numberOfList;++i) {
+        instanceList.removeOne(listOrderAccount.at(i));
+    }
+
+    QStringList finalList (listOrderAccount);
+    finalList += instanceList;
+
+    const int numberOfElement(finalList.count());
+    for(int i = 0; i <numberOfElement;++i) {
+        const QString identifier(finalList.at(i));
+        if(mapInstance.contains(identifier)) {
+            QListWidgetItem * item = new QListWidgetItem(mapInstance.value(identifier),mListAccount);
+            item->setData(AccountConfigOrderDialog::IdentifierAccount, identifier);
+            mListAccount->addItem( item );
+        }
+    }
+}
+
+void AccountConfigOrderDialog::slotOk()
+{
+    QStringList order;
+    const int numberOfItems(mListAccount->count());
+    for(int i = 0; i<numberOfItems; ++i) {
+        order<<mListAccount->item(i)->data(AccountConfigOrderDialog::IdentifierAccount).toString();
+    }
+    KConfigGroup group( KMKernel::self()->config(), "AccountOrder" );
+    group.writeEntry("order",order);
+    group.sync();
+
+}
+
+#include "accountconfigorderdialog.moc"
